# Azero_SDK_for_Android

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: AlexaClientSDKConfig.json
app/src/main/assets/config/: sai.db  sai.q  sai_collect.db  saipara.ser  saires1.q  saires_sai.q  saires_sai.txt  saires_sai2.q
app/src/main/assets/config2/: saipara.ser  saires0.q  saires_sai.txt
app/src/main/assets/config_head/: saipara.ser  saires_sai.id2pdf  saires_sai.txt
app/src/main/libs/: denoise-release.aar
docs/: 声智Azero系统说明文档 - TurnkeySample.md  声智Azero系统说明文档.md
docs/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
docs/javadoc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
patch/: launcher_backgroud.patch
saibasex/: .gitignore  CMakeLists.txt  build.gradle
saibasex/src/androidTest/java/com/example/saibasex/: ExampleInstrumentedTest.java
saibasex/src/main/: AndroidManifest.xml
saibasex/src/main/cpp/: open_basex.cpp  sai_micbasex_interface.h
saibasex/src/main/java/com/soundai/basex/lib/: BasexEventListener.java  BasexJni.java  BasexJniCallback.java  BasexManager.java
saibasex/src/main/res/values/: strings.xml
saibasex/src/test/java/com/example/saibasex/: ExampleUnitTest.java
(+243 files in other folders)
